[package]
name = "mse_fmp4"
version = "0.2.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A library for generating fragmented MP4 that playable via Media Source Extensions"
homepage = "https://github.com/sile/mse_fmp4"
repository = "https://github.com/sile/mse_fmp4"
readme = "README.md"
license = "MIT"
edition = "2018"

[badges]
travis-ci = {repository = "sile/mse_fmp4"}
codecov = {repository = "sile/mse_fmp4"}

[dependencies]
byteorder = "1"
mpeg2ts= {git = "https://github.com/ninehill/mpeg2ts"}
trackable = "0.2"

[dev-dependencies]
clap = "2"
